# WebpPlayer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  compile.sh  gradle.properties  settings.gradle.kts
benchmark/: run_scale_benchmark.sh  scale_benchmark.cpp
gradle/wrapper/: gradle-wrapper.properties
io/webpkit/player/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
io/webpkit/player/1.0.1/: player-1.0.1-sources.jar.md5  player-1.0.1-sources.jar.sha1  player-1.0.1-sources.jar.sha256  player-1.0.1-sources.jar.sha512  player-1.0.1.aar  player-1.0.1.aar.md5  player-1.0.1.aar.sha1  player-1.0.1.aar.sha256  player-1.0.1.aar.sha512  player-1.0.1.module  player-1.0.1.module.md5  player-1.0.1.module.sha1  player-1.0.1.module.sha256  player-1.0.1.module.sha512  player-1.0.1.pom  player-1.0.1.pom.md5  player-1.0.1.pom.sha1  player-1.0.1.pom.sha256  player-1.0.1.pom.sha512
io/webpkit/player/1.0.2/: player-1.0.2-sources.jar.md5  player-1.0.2-sources.jar.sha1  player-1.0.2-sources.jar.sha256  player-1.0.2-sources.jar.sha512  player-1.0.2.aar  player-1.0.2.aar.md5  player-1.0.2.aar.sha1  player-1.0.2.aar.sha256  player-1.0.2.aar.sha512  player-1.0.2.module  player-1.0.2.module.md5  player-1.0.2.module.sha1  player-1.0.2.module.sha256  player-1.0.2.module.sha512  player-1.0.2.pom  player-1.0.2.pom.md5  player-1.0.2.pom.sha1  player-1.0.2.pom.sha256  player-1.0.2.pom.sha512
io/webpkit/player/1.0.3/: player-1.0.3.aar  (+18 more)
webpview/: build.gradle.kts  consumer-rules.pro
webpview/src/main/: AndroidManifest.xml
webpview/src/main/cpp/: CMakeLists.txt  WebPYUVDecoder.cpp
webpview/src/main/cpp/libwebp/src/dec/: vp8l_dec.c
webpview/src/main/cpp/libwebp/src/demux/: anim_decode.c
(+34 files in other folders)
